Fix removed process builder by accident